2016-11-08  Marc A. Smith  <marc.smith@parodyne.com>

	tweaked a couple variable lines in the Makefile; added a sed-patch for ocf:lvm2:VolumeGroup so OCF_ERR_GENERIC is not returned when attempting a probe operation (eg, before clvmd is started)

2016-11-05  Marc A. Smith  <marc.smith@parodyne.com>

	updated the tzdata target to include the "factory" timezone data files; more bug fixes in the ESOS 'scst' and 'alua' resource agents; bug fix in the TUI's dateTimeDialog() function

2016-11-04  Marc A. Smith  <marc.smith@parodyne.com>

	added the tzdata package for time zone information (not part of glibc anymore); renamed the btier OCF RA (location); include the dd utility from the coreutils package since Busybox's dd doesn't work for the 'Raid1' RA and disable Busybox dd; fixed an issue in the ESOS SCST RA with detecting dlm_controld; added a patch for the Raid1 RA so it works correctly with the udev-provided MD array sym link

2016-11-02  Marc A. Smith  <marc.smith@parodyne.com>

	updated the linux_firmware package to the latest available; added the docutils package (new dependency of python-daemon); more build fixes; we now include all of /lib/firmware in the initramfs image so dependent inline drivers work correctly (eg, bnx2); implemented flock for Python module targets to hopefully avoid build issues when using parallel make (eg, keep easy-install.pth from getting clobbered)

2016-10-31  Marc A. Smith  <marc.smith@parodyne.com>

	added a temporary bug fix for Busybox 1.25.1 (cpio); updated Linux to 4.9.0-rc3

2016-10-28  Marc A. Smith  <marc.smith@parodyne.com>

	a couple tweaks for the new OpenSSH version; removed default ssh_* files from /etc since we now let the make recipe install these; some more binary path changes (TUI)

	updated a few more optional packages (gdb, valgrind, and strace); fix for ntpd to keep it from entering an endless loop; updated new path for the ip utility in the rc.network script

2016-10-27  Marc A. Smith  <marc.smith@parodyne.com>
