@@ -179,3 +179,4 @@ swig
 userspace-rcu
 docutils
 tzdata
+nvme-cli
