@@ -105,7 +105,7 @@ b7595eb4705e482ee6fc1121a5b6131b  kexec-tools-2.0.13.tar.gz
 148888a7c95ac23705559b6f477dfe25  bash-4.4.tar.gz
 12e8c6131a27c05422edcd2ae3e79dfb  qlogic_fw-20140928.tar.gz
 8afdb925dba24a58b74fff74d7f3180e  lessfs-1.7.0.tar.gz
-d6f290afbc4a3e2f0f8465b80ffe6391  mdadm-3.4.tar.gz
+bad93e6f180231efdce636990540afbe  mdadm-master_20161129.tar.gz
 7d354d904bad591a931ad57e99fea84a  htop-2.0.2.tar.gz
 281ee572d45c78eca73a14834c495ffd  dmidecode-3.0.tar.xz
 503651550379ed72f7c6923a4c3551bd  xmlrpc-c-1.39.11.tar.gz
@@ -161,3 +161,4 @@ bb4ab8047159469add7d00910e203124  swig-3.0.10.tar.gz
 49f86e68c1e2f41d303381a271b791d1  userspace-rcu-0.9.2.tar.bz2
 4622263b62c5c771c03502afa3157768  docutils-0.12.tar.gz
 b5bfa8e658de7b481c001c1f6b330bcb  tzdata-2016i.tar.gz
+5a68c67f69f94d4859020a9a33d12eeb  nvme-cli-1.0.tar.gz
