@@ -105,7 +105,7 @@ fb41e3b536735235056643fb12187355c6561b9148996c093e8faddd4fced571  nsca-2.7.2.tar
 d86b3392c1202e8ff5a423b302e6284db7f8f435ea9f39b5b1b20fd3ac36dfcb  bash-4.4.tar.gz
 2bf9c3a32c1d1ab069f3560019782ba2eba2c49579c68c26cdcfca62dfcb2826  qlogic_fw-20140928.tar.gz
 d5782ab88ca79bf8f7d790d440f30e3979ec8ecad2a8eae75d33260bfadc8711  lessfs-1.7.0.tar.gz
-b42840691ca76880c9d6a5cde30895db1343ac0acac0ccd1eb2ed782323ba87e  mdadm-3.4.tar.gz
+8c247fabb642178fe4eaff3e5f39a9dc392113438da0563ea9bcfc81e93faf0a  mdadm-master_20161129.tar.gz
 179be9dccb80cee0c5e1a1f58c8f72ce7b2328ede30fb71dcdf336539be2f487  htop-2.0.2.tar.gz
 7ec35bb193729c1d593a1460b59d82d24b89102ab23fd0416e6cf4325d077e45  dmidecode-3.0.tar.xz
 2e56cdcdd5c5fa564bcdc7a56bca108a88f5b78b34ccc85558366efabdc8b8e8  xmlrpc-c-1.39.11.tar.gz
@@ -161,3 +161,4 @@ c9d846e029c477bbc8c34cef8f30e2216258021fd9277a1b588db67efdc204ad  openwsman-2.6.
 8f7fa313b1e0a3f742cea24ce63a39c0efe63e615a769e2961e55bd2663ecaa3  userspace-rcu-0.9.2.tar.bz2
 c7db717810ab6965f66c8cf0398a98c9d8df982da39b4cd7f162911eb89596fa  docutils-0.12.tar.gz
 f199171613ec2da757fe0a7523a58057c15e22d308cf0079c5c64459451e751a  tzdata-2016i.tar.gz
+1391bac6b8e1acf4f91c0b8b60d1055b142e7d3d041ea9799fc157517897439c  nvme-cli-1.0.tar.gz
